# qabot

./: .env.sample  .flake8  .gitignore  README.md  pyproject.toml  pyrightconfig.json  qabot.code-workspace
.github/workflows/: build-push.yml  staging-vector_server.yml  staging.yml
src/: agent.py  main.py  task_manager.py
src/llm/: json_output_parser.py
src/llm/extract_entity/: prompt.py
src/llm/reason/: prompt.py  schema.py
src/llm/summarize/: prompt.py
src/logger/: log.py
src/memory/: episodic_memory.py  procedual_memory.py
src/tools/: discord.py
